none: Improve I18n tooling.